--- a/_sass/layout/_page.scss
+++ b/_sass/layout/_page.scss
@@ -49,7 +49,9 @@
 }
 
 .page__content {
-
+  max-width: 1100px;
+  margin-left: auto;
+  margin-right: auto;
   h2 {
     padding-bottom: 0.5em;
     border-bottom: 1px solid var(--global-border-color);
