--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -18,11 +18,10 @@
 
 <style>
   .page__inner-wrap,
-  .page,
-  .page-content,
-  .wrapper,
-  .container {
+  .page-content {
     max-width: 1200px !important;
-    width: 100% !important;
+    margin: 0 auto !important;
+    padding-left: 20px !important;
+    padding-right: 20px !important;
   }
 </style>
