--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -17,10 +17,13 @@
 <!-- end custom head snippets -->
 
 <style>
-  .page__inner-wrap,
-  .page-content {
+  .page {
     max-width: 1200px !important;
+    width: 100% !important;
     margin: 0 auto !important;
+  }
+
+  .page__inner-wrap {
     padding-left: 20px !important;
     padding-right: 20px !important;
   }
