--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -18,13 +18,19 @@
 
 <style>
   .page {
-    max-width: 1200px !important;
-    width: 100% !important;
-    margin: 0 auto !important;
+    max-width: 1100px !important;
+    margin-left: auto !important;
+    margin-right: auto !important;
   }
 
-  .page__inner-wrap {
-    padding-left: 20px !important;
-    padding-right: 20px !important;
+  @media (min-width: 900px) {
+    .page {
+      margin-right: 340px !important;
+    }
+  }
+
+  .wrapper {
+    max-width: none !important;
   }
 </style>
+
